--- a/Heimdall/Core/View/Results.xaml
+++ b/Heimdall/Core/View/Results.xaml
@@ -5,14 +5,41 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:src="clr-namespace:Heimdall.Core.ViewModel"
              xmlns:local="clr-namespace:Heimdall.Core.View"
+             xmlns:model="clr-namespace:Heimdall.Core.Model"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-    <UserControl.DataContext>
-        <src:ResultsViewModel />
-    </UserControl.DataContext>
-    
-    <StackPanel Background="WhiteSmoke">
-        <Label Content="{Binding Resp}" />
+    <StackPanel>
+        <Button Content="Go Back" Command="{Binding ReturnToLanding}"/>
+        <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+            <ListView ItemsSource="{Binding ListResults}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Background="Black" ClipToBounds="True">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <StackPanel Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+                                <Label Content="{Binding title}" FontSize="32" Foreground="White"/>
+                                <Label Content="Genres" Padding="0, 28, 0, 0" Foreground="White"/>
+                            </StackPanel>
+                            <StackPanel Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1">
+                                <Label Content="{Binding overview}" ClipToBounds="True" Foreground="White"/>
+                            </StackPanel>
+                            <StackPanel Grid.Column="2" Grid.Row="1">
+                                <Label Content="{Binding vote_average}" Foreground="White"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </ScrollViewer>
     </StackPanel>
 </UserControl>
