--- a/Heimdall/Core/App.xaml
+++ b/Heimdall/Core/App.xaml
@@ -1,8 +1,11 @@
 ﻿<Application x:Class="Heimdall.Core.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Heimdall.Core">
+             xmlns:local="clr-namespace:Heimdall.Core"
+             xmlns:vm="clr-namespace:Heimdall.Core.ViewModel"
+             Startup="App_StartUp">
+
     <Application.Resources>
-         
+        <vm:ViewModelLocator x:Key="Locator" />
     </Application.Resources>
 </Application>
