Project re-structure
 - Fixed view models
 - Removed unnecessary model classes

--- a/Heimdall/Core/App.xaml
+++ b/Heimdall/Core/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Heimdall.Core.App"
+﻿<Application x:Class="MyMDB.Core.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Heimdall.Core"
-             xmlns:vm="clr-namespace:Heimdall.Core.ViewModel"
+             xmlns:local="clr-namespace:MyMDB.Core"
+             xmlns:vm="clr-namespace:MyMDB.Core.ViewModel"
              Startup="App_StartUp">
 
     <Application.Resources>
