--- a/Heimdall/Core/View/LandingPage.xaml
+++ b/Heimdall/Core/View/LandingPage.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Heimdall.Core.View.LandingPage"
+﻿<UserControl x:Class="MyMDB.Core.View.LandingPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Heimdall.Core.View"
-      xmlns:src="clr-namespace:Heimdall.Core.ViewModel"
+      xmlns:local="clr-namespace:MyMDB.Core.View"
+      xmlns:src="clr-namespace:MyMDB.Core.ViewModel"
       mc:Ignorable="d" 
       HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
@@ -17,7 +17,7 @@
             <ImageBrush ImageSource="{Binding ImageBackground}" />
         </DockPanel.Background>
         <DockPanel DockPanel.ZIndex="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Black" Opacity="0.75">
-            <TextBox x:Name="TextMain" Text="{Binding TextInput, UpdateSourceTrigger=PropertyChanged}"
+            <TextBox x:Name="TextMain" Text="{Binding TextInput, UpdateSourceTrigger=PropertyChanged}" GotFocus="TextBox_GotFocus"
                         FontSize="72" Background="Transparent" BorderThickness="0 0 0 3" BorderBrush="White" Focusable="True" AcceptsReturn="False"
                          HorizontalAlignment="Center" VerticalAlignment="Center"
                          Foreground="White" FontFamily="Pacifico">
