--- a/Heimdall/Core/View/MainWindow.xaml
+++ b/Heimdall/Core/View/MainWindow.xaml
@@ -1,15 +1,18 @@
-﻿<Window x:Class="Heimdall.Core.View.MainWindow"
+﻿<Controls:MetroWindow x:Class="MyMDB.Core.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:src="clr-namespace:Heimdall.Core.ViewModel"
-        xmlns:local="clr-namespace:Heimdall.Core.View"
+        xmlns:src="clr-namespace:MyMDB.Core.ViewModel"
+        xmlns:local="clr-namespace:MyMDB.Core.View"
         mc:Ignorable="d"
-        Title="Heimdall" 
+        Title="MyMDB" 
         x:Name="MainWindowView"
-        WindowState="Maximized" 
-        WindowStyle="None"
+        WindowState="Normal"
+        WindowStartupLocation="CenterScreen"
+        MinWidth="800"
+        MinHeight="600"                   
         DataContext="{Binding Source={StaticResource Locator}, Path=ViewModelName}">
 
     <Window.Resources>
@@ -19,12 +22,9 @@
         <DataTemplate DataType="{x:Type src:ResultsViewModel}">
             <local:Results />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type src:ResultListingViewModel}">
-            <local:ResultListing />
-        </DataTemplate>
     </Window.Resources>
     
     <Grid>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
-</Window>
+</Controls:MetroWindow>
