--- a/Heimdall/Core/View/Results.xaml
+++ b/Heimdall/Core/View/Results.xaml
@@ -1,45 +1,27 @@
-﻿<UserControl x:Class="Heimdall.Core.View.Results"
+﻿<UserControl x:Class="MyMDB.Core.View.Results"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:src="clr-namespace:Heimdall.Core.ViewModel"
-             xmlns:local="clr-namespace:Heimdall.Core.View"
-             xmlns:model="clr-namespace:Heimdall.Core.Model"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"         
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
-             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+             VerticalAlignment="Stretch">
 
-    <StackPanel>
-        <Button Content="Go Back" Command="{Binding ReturnToLanding}"/>
-        <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
-            <ListView ItemsSource="{Binding ListResults}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Background="Black" ClipToBounds="True">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-
-                            <StackPanel Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-                                <Label Content="{Binding title}" FontSize="32" Foreground="White"/>
-                                <Label Content="Genres" Padding="0, 28, 0, 0" Foreground="White"/>
-                            </StackPanel>
-                            <StackPanel Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="1">
-                                <Label Content="{Binding overview}" ClipToBounds="True" Foreground="White"/>
-                            </StackPanel>
-                            <StackPanel Grid.Column="2" Grid.Row="1">
-                                <Label Content="{Binding vote_average}" Foreground="White"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
+    <DockPanel>
+        <StackPanel DockPanel.Dock="Top">
+            <Button Content="Return" Command="{Binding ReturnToLanding}"/>
+            <Button Content="List" Command="{Binding DatabaseContent}"/>
+        </StackPanel>
+        <DockPanel>
+            <ListView Name="itemList"  ItemsSource="{Binding ResultsList}" HorizontalContentAlignment="Stretch">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                        <i:InvokeCommandAction Command="{Binding DataContext.ResultClickHandler,
+                            RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
+                                               CommandParameter="{Binding}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
             </ListView>
-        </ScrollViewer>
-    </StackPanel>
+        </DockPanel>
+    </DockPanel>
 </UserControl>
